run mn event scrape every hour (typically takes only ~1 minute)
Signed-off-by: John Seekins <john@civiceagle.com>

--- a/tasks/mn.yml
+++ b/tasks/mn.yml
@@ -17,8 +17,8 @@ MN-events:
   enabled: true
   environment: scrapers
   triggers:
-    - cron: 20 8,17 * * ?
-  timeout_minutes: 60
+    - cron: 20 * * * ?
+  timeout_minutes: 55
 
 MN-text:
   image: openstates/core
